# rjvm

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
core/: Cargo.toml  README.md
core/src/: lib.rs  reader.rs  utils.rs
core/src/classfile/: attribute.rs  class.rs  constant_pool.rs  error.rs  field.rs  flags.rs  method.rs  mod.rs  reader.rs
core/src/gc/: gc.rs  mod.rs  trace_impl.rs
core/src/jar/: jar.rs  jar_stub.rs  mod.rs  read_zip.rs
core/src/runtime/: array.rs  builtins.rs  call_stack.rs  class.rs  context.rs  descriptor.rs  error.rs  field.rs  intern.rs  interpreter.rs  loader.rs  method.rs  mod.rs  object.rs  op.rs  read_macros.rs  value.rs  verify.rs  vtable.rs
core/src/string/: interner.rs  (+2 more)
desktop/: Cargo.toml  README.md
desktop/src/: loader_backend.rs  main.rs  native_impl.rs
globals/: Cargo.toml  README.md  build.rs
globals/src/: hash_code.rs  impls_field_access.rs  impls_loader.rs  impls_misc.rs  impls_reflect.rs  impls_system.rs  lib.rs  native_impl.rs  reflect.rs
src/: main.rs
src/classfile/: attribute.rs  class.rs  constant_pool.rs  field.rs  flags.rs  method.rs  mod.rs  reader.rs
src/gc/: gc.rs  trace_impl.rs
src/jar/: jar.rs
src/runtime/: class.rs  context.rs  descriptor.rs  error.rs  field.rs  interpreter.rs  method.rs  mod.rs  native_impl.rs  object.rs  op.rs  value.rs  verify.rs  vtable.rs
src/string/: jvm_string.rs  mod.rs
tests/: README.md  run.sh
web/: Cargo.toml  index.html  worker.js
web/src/: lib.rs  loader_backend.rs  native_impl.rs  runner.rs
web/src/backends/: filesystem.rs  loader.rs  system.rs
(+428 files in other folders)
