[package]
name = "rjvm_web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
regex = "=1.11.1"
rjvm_core = { path = "../core" }
rjvm_globals = { path = "../globals" }
wasm-bindgen = "0.2.106"

[dependencies.web-sys]
features = ['Document', 'Element', 'HtmlElement', 'HtmlTextAreaElement', 'Node', 'Window']
version = "0.3.83"

# pass wasm-opt the `-g` flag to make sure it doesn't remove debug info
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O3', '-g']
